# twitter-clone-with-langchain

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/core/: settings.py  urls.py
backend/users/: admin.py  models.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
